tests/ui/invalid_syntax.stderr
error: unexpected token
 --> tests/ui/invalid_syntax.rs:6:22
  |
6 |     #[invariant(this is not a valid expression >>>)]
  |                      ^^

warning: unused import: `praborrow_core::CheckProtocol`
 --> tests/ui/invalid_syntax.rs:2:5
  |
2 | use praborrow_core::CheckProtocol; // Trait required for derive
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
